remove object when they go up

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <h2 class="presentation-main-skill">
             Welcome to my personal portfolio!
           </h2>
-          <p id="presentation-description">
+          <p class="presentation-description">
             I'm a cuban computer science from Havana University. Currently, I'm
             working as full-stack engineer focused in building .net application
             and their performance. Also, I work in frontend websites using
