change the padding top of section and replace div by picture tag

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div id="nav-columnar-menu-background">
           <div id="nav-columnar-menu">
-            <div class="image-container">
+            <picture class="image-container">
               <img
                 class="logo"
                 src="./images/logo.png"
@@ -99,7 +99,7 @@
                 width="150"
                 height="150"
               />
-            </div>
+            </picture>
             <hr />
             <ul id="nav-columnar-menu-list">
               <li class="nav-element">
@@ -177,7 +177,7 @@
         <div class="card-projects">
           <h2 class="subtitle reveal">
             Some projects<br />
-            I've make
+            I've made
           </h2>
           <div id="open-ecommerce" class="card-project reveal">
             <div class="card-title">OpenEcommerce</div>
