replace div by article

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             Some projects<br />
             I've made
           </h2>
-          <div id="open-ecommerce" class="card-project reveal">
+          <article id="open-ecommerce" class="card-project reveal">
             <div class="card-title">OpenEcommerce</div>
             <div class="card-description">
               <p>
@@ -195,8 +195,8 @@
                 ><i class="fab fa-github fa-gl"></i
               ></a>
             </div>
-          </div>
-          <div id="angular-portfolio" class="card-project reveal">
+          </article>
+          <article id="angular-portfolio" class="card-project reveal">
             <div class="card-title">Angular Portfolio</div>
             <div class="card-description">
               <p>
@@ -211,7 +211,7 @@
                 ><i class="fab fa-github fa-gl"></i
               ></a>
             </div>
-          </div>
+          </article>
         </div>
       </section>
       <footer>
