add h3 to the articles

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             I've made
           </h2>
           <article id="open-ecommerce" class="card-project reveal">
-            <div class="card-title">OpenEcommerce</div>
+            <div class="card-title"><h3>OpenEcommerce</h3></div>
             <div class="card-description">
               <p>
                 OpenEcommerce is an ecommerce builded with .net. Using a
@@ -197,7 +197,7 @@
             </div>
           </article>
           <article id="angular-portfolio" class="card-project reveal">
-            <div class="card-title">Angular Portfolio</div>
+            <div class="card-title"><h3>Angular Portfolio</h3></div>
             <div class="card-description">
               <p>
                 It is a personal portfolio builded with angular using really
