replace div tag with other semantically more correct

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </section>
       <section id="aboutMe">
         <div class="centered-article">
-          <h2 class="subtitle reveal">About me</h2>
+          <header><h2 class="subtitle reveal">About me</h2></header>
           <p class="reveal">
             Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
             coding on and off the work. I started working as a backend developer
@@ -175,12 +175,15 @@
       </section>
       <section id="work">
         <div class="card-projects">
-          <h2 class="subtitle reveal">
-            Some projects<br />
-            I've made
-          </h2>
+          <header>
+            <h2 class="subtitle reveal">
+              Some projects<br />
+              I've made
+            </h2>
+          </header>
+
           <article id="open-ecommerce" class="card-project reveal">
-            <div class="card-title"><h3>OpenEcommerce</h3></div>
+            <header class="card-title"><h3>OpenEcommerce</h3></header>
             <div class="card-description">
               <p>
                 OpenEcommerce is an ecommerce builded with .net. Using a
@@ -197,7 +200,7 @@
             </div>
           </article>
           <article id="angular-portfolio" class="card-project reveal">
-            <div class="card-title"><h3>Angular Portfolio</h3></div>
+            <header class="card-title"><h3>Angular Portfolio</h3></header>
             <div class="card-description">
               <p>
                 It is a personal portfolio builded with angular using really
@@ -218,7 +221,7 @@
         <div class="footer">
           <div id="contact" class="contacts reveal">
             <h2 class="subtitle contacts-item">Contact</h2>
-            <div class="contacts-item">
+            <address class="contacts-item">
               <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"
                 ><i class="fab fa-google fa-3x"></i
               ></a>
@@ -231,7 +234,7 @@
               <a class="icon-link" href="https://twitter.com/carlosjorgerc"
                 ><i class="fab fa-twitter fa-3x"></i
               ></a>
-            </div>
+            </address>
           </div>
           <div class="footer-info reveal">
             <p class="footer-info-item">
