add nav tag on the sidebar

--- a/index.html
+++ b/index.html
@@ -101,32 +101,34 @@
               />
             </picture>
             <hr />
-            <ul id="nav-columnar-menu-list">
-              <li class="nav-element">
-                <i class="fa fa-house fa-xl"></i>
-                <a class="nav-link compressed" href="#"
-                  ><h2 class="nav-link-label">Home</h2></a
-                >
-              </li>
-              <li class="nav-element">
-                <i class="fa fa-user fa-xl"></i>
-                <a class="nav-link compressed" href="#aboutMe"
-                  ><h2 class="nav-link-label">About me</h2></a
-                >
-              </li>
-              <li class="nav-element">
-                <i class="fa fa-tasks fa-xl"></i>
-                <a class="nav-link compressed" href="#work"
-                  ><h2 class="nav-link-label">Work</h2></a
-                >
-              </li>
-              <li class="nav-element">
-                <i class="fa fa-phone fa-xl"></i>
-                <a class="nav-link compressed" href="#contact"
-                  ><h2 class="nav-link-label">Contact</h2></a
-                >
-              </li>
-            </ul>
+            <nav>
+              <ul id="nav-columnar-menu-list">
+                <li class="nav-element">
+                  <i class="fa fa-house fa-xl"></i>
+                  <a class="nav-link compressed" href="#"
+                    ><h2 class="nav-link-label">Home</h2></a
+                  >
+                </li>
+                <li class="nav-element">
+                  <i class="fa fa-user fa-xl"></i>
+                  <a class="nav-link compressed" href="#aboutMe"
+                    ><h2 class="nav-link-label">About me</h2></a
+                  >
+                </li>
+                <li class="nav-element">
+                  <i class="fa fa-tasks fa-xl"></i>
+                  <a class="nav-link compressed" href="#work"
+                    ><h2 class="nav-link-label">Work</h2></a
+                  >
+                </li>
+                <li class="nav-element">
+                  <i class="fa fa-phone fa-xl"></i>
+                  <a class="nav-link compressed" href="#contact"
+                    ><h2 class="nav-link-label">Contact</h2></a
+                  >
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </nav>
