remove remaining trailing slash

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <meta
             property="og:site_name"
             content="Carlos Jorge's personal portfolio website"
-        />
+        >
         <meta
             property="og:image"
             content="https://carlosjorger.github.io/images/logo.png"
@@ -151,7 +151,7 @@
                 <div class="presentation centered-article">
                     <div class="reveal active">
                         <h1 class="presentation-title">
-                            Hi, I am <br class="br-show" />Carlos Jorge, <br />
+                            Hi, I am <br class="br-show">Carlos Jorge, <br>
                             Web developer!
                         </h1>
                     </div>
@@ -194,7 +194,7 @@
                 <div class="card-projects">
                     <header>
                         <h2 class="subtitle reveal">
-                            Some projects<br />
+                            Some projects<br>
                             I've made
                         </h2>
                     </header>
@@ -269,7 +269,7 @@
                     <div class="footer-info reveal">
                         <p class="footer-info-item">
                             © 2022 Carlos Jorge
-                            <br />
+                            <br>
                             <a
                                 class="work-link"
                                 href="https://github.com/carlosjorger/carlosjorger.github.io"
