--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
                 </ul>
             </nav>
             <nav class="navbar-compressed">
-                <div class="nav-header-menu">
+                <div class="nav-header-menu changeable">
                     <a class="icon-link" id="show-nav-columnar-menu"
                         ><i class="fa fa-bars fa-xl"></i
                     ></a>
                 </div>
-                <div id="nav-columnar-menu-background">
-                    <div id="nav-columnar-menu">
+                <div class="nav-columnar-menu-background changeable">
+                    <div id="nav-columnar-menu" class="changeable">
                         <picture class="image-container">
                             <img
-                                class="logo"
+                                class="logo changeable"
                                 src="./images/logo.png"
                                 alt="logo"
                                 width="150"
