convert all image to webp

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         >
         <meta
             property="og:image"
-            content="https://carlosjorger.github.io/images/logo.png"
+            content="https://carlosjorger.github.io/images/logo.webp"
         >
         <meta
             property="twitter:description"
@@ -99,7 +99,7 @@
                         <picture class="image-container">
                             <img
                                 class="logo changeable"
-                                src="./images/logo.png"
+                                src="./images/logo.webp"
                                 alt="logo"
                                 width="150"
                                 height="150"
