add lato font and italic

--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap"
-            rel="stylesheet"
-        >
+        <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400italic%27,700' rel='stylesheet' type='text/css'>
+
         <script src="index.js"></script>
     </head>
 
@@ -271,7 +270,7 @@
                 </div>
                 <div class="footer-info reveal">
                     <p class="footer-info-item">
-                        © 2022 Carlos Jorge
+                        <strong class="year">© 2022 Carlos Jorge</strong>
                         <br>
                         <a
                             class="work-link"
