remove unneccesary anchor tag

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Lato:400italic%27,700' rel='stylesheet' type='text/css'>
 
         <script src="index.js"></script>
@@ -90,9 +90,8 @@
             </nav>
             <nav class="navbar-compressed">
                 <div class="nav-header-menu changeable">
-                    <a class="icon-link" id="show-nav-columnar-menu"
-                        ><i class="fa fa-bars fa-xl"></i
-                    ></a>
+                    <i class="fa fa-bars fa-xl icon-link change-sidebar" id="show-nav-columnar-menu">
+                    </i>
                 </div>
                 <div class="nav-columnar-menu-background changeable">
                     <div id="nav-columnar-menu" class="changeable">
@@ -110,14 +109,14 @@
                             <ul id="nav-columnar-menu-list">
                                 <li class="nav-element">
                                     <i class="fa fa-house fa-xl"></i>
-                                    <a class="nav-link compressed" href="#"
+                                    <a class="nav-link compressed change-sidebar" href="#"
                                         ><h2 class="nav-link-label">Home</h2></a
                                     >
                                 </li>
                                 <li class="nav-element">
                                     <i class="fa fa-user fa-xl"></i>
                                     <a
-                                        class="nav-link compressed"
+                                        class="nav-link compressed change-sidebar"
                                         href="#aboutMe"
                                         ><h2 class="nav-link-label">
                                             About me
@@ -126,14 +125,14 @@
                                 </li>
                                 <li class="nav-element">
                                     <i class="fa fa-tasks fa-xl"></i>
-                                    <a class="nav-link compressed" href="#work"
+                                    <a class="nav-link compressed change-sidebar" href="#work"
                                         ><h2 class="nav-link-label">Work</h2></a
                                     >
                                 </li>
                                 <li class="nav-element">
                                     <i class="fa fa-phone fa-xl"></i>
                                     <a
-                                        class="nav-link compressed"
+                                        class="nav-link compressed change-sidebar"
                                         href="#contact"
                                         ><h2 class="nav-link-label">
                                             Contact
