--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             <div class="card-links">
               <a
                 class="icon-link"
+                aria-label="See my ecommerce github project"
                 href="https://github.com/carlosjorger/openEcommerce"
                 ><i class="fab fa-github fa-gl"></i
               ></a>
@@ -216,6 +217,7 @@
             <div class="card-links">
               <a
                 class="icon-link"
+                aria-label="See my portfolio github project"
                 href="https://github.com/carlosjorger/portfolio"
                 ><i class="fab fa-github fa-gl"></i
               ></a>
@@ -229,16 +231,28 @@
         <div id="contact" class="contacts reveal">
           <h2 class="subtitle contacts-item">Contact</h2>
           <address class="contacts-item">
-            <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"
+            <a
+              class="icon-link"
+              href="mailto:rodriguezcuelloc@gmail.com"
+              aria-label="contact via this email address"
               ><i class="fab fa-google fa-3x"></i
             ></a>
-            <a class="icon-link" href="https://github.com/carlosjorger"
+            <a
+              class="icon-link"
+              href="https://github.com/carlosjorger"
+              aria-label="See my github profile"
               ><i class="fab fa-github fa-3x"></i
             ></a>
-            <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"
+            <a
+              class="icon-link"
+              href="https://www.linkedin.com/in/cjrcuello/"
+              aria-label="See my linkedin profile and connect with me"
               ><i class="fab fa-linkedin fa-3x"></i
             ></a>
-            <a class="icon-link" href="https://twitter.com/carlosjorgerc"
+            <a
+              class="icon-link"
+              href="https://twitter.com/carlosjorgerc"
+              aria-label="See my twitter profile and follow me"
               ><i class="fab fa-twitter fa-3x"></i
             ></a>
           </address>
