--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css?family=Lato:400,700"
+      href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
       type="text/css" />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css?family=Lato:400italic%27,700"
+      href="https://fonts.googleapis.com/css?family=Lato:400italic%27,700&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
       type="text/css" />
