--- a/index.html
+++ b/index.html
@@ -44,14 +44,33 @@
     <link rel="stylesheet" type="text/css" href="./css/footer.css" />
 
     <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
       as="style"
+      rel="stylesheet preload prefetch"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
       onload="this.onload=null;this.rel='stylesheet'"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-
+    <link
+      as="style"
+      rel="stylesheet preload prefetch"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
+      onload="this.onload=null;this.rel='stylesheet'"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <link
+      as="style"
+      rel="stylesheet preload prefetch"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/regular.min.css"
+      onload="this.onload=null;this.rel='stylesheet'"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <link
+      as="style"
+      rel="stylesheet preload prefetch"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
+      onload="this.onload=null;this.rel='stylesheet'"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
