--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
 
     <link
       as="style"
-      rel="stylesheet preload prefetch"
+      rel="stylesheet preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
       onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
     <link
       as="style"
-      rel="stylesheet preload prefetch"
+      rel="stylesheet preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
       onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
     <link
       as="style"
-      rel="stylesheet preload prefetch"
+      rel="stylesheet preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/regular.min.css"
       onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
     <link
       as="style"
-      rel="stylesheet preload prefetch"
+      rel="stylesheet preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
       onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
