using fontawesome locally

--- a/index.html
+++ b/index.html
@@ -43,28 +43,10 @@
     <link rel="stylesheet" type="text/css" href="./css/project-section.css" />
     <link rel="stylesheet" type="text/css" href="./css/footer.css" />
 
-    <link
-      as="style"
-      rel="stylesheet preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
-      onload="this.onload=null;this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-    <link
-      as="style"
-      rel="stylesheet preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
-      onload="this.onload=null;this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="./css/fontawesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/brands.min.css" />
 
-    <link
-      as="style"
-      rel="stylesheet preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
-      onload="this.onload=null;this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="./css/solid.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
