--- a/index.html
+++ b/index.html
@@ -230,25 +230,23 @@
               class="icon-link"
               href="mailto:rodriguezcuelloc@gmail.com"
               aria-label="contact via this email address"
-              ><i class="fab fa-google fa-3x"></i
+              ><i class="svg-icon icon-google"></i
             ></a>
             <a
               class="icon-link"
               href="https://github.com/carlosjorger"
               aria-label="See my github profile"
-              ><i class="fab fa-github fa-3x"></i
+              ><i class="svg-icon icon-github"></i
             ></a>
             <a
-              class="icon-link"
               href="https://www.linkedin.com/in/cjrcuello/"
               aria-label="See my linkedin profile and connect with me"
-              ><i class="fab fa-linkedin fa-3x"></i
+              ><i class="svg-icon icon-linkedin"></i
             ></a>
             <a
-              class="icon-link"
               href="https://twitter.com/carlosjorgerc"
               aria-label="See my twitter profile and follow me"
-              ><i class="fab fa-twitter fa-3x"></i
+              ><i class="svg-icon icon-twitter"> </i
             ></a>
           </address>
         </div>
