replace all icons with svg icons

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
     <link rel="stylesheet" type="text/css" href="./css/project-section.css" />
     <link rel="stylesheet" type="text/css" href="./css/footer.css" />
 
-    <link rel="stylesheet" type="text/css" href="./css/fontawesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/brands.min.css" />
-
-    <link rel="stylesheet" type="text/css" href="./css/solid.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
@@ -69,7 +65,9 @@
       <nav class="navbar-uncompressed">
         <ul class="navbar">
           <li id="home">
-            <a href="#" class="icon-link"><i class="fa fa-house fa-lg"></i></a>
+            <a href="#" class="icon-link">
+              <i class="svg-icon svg-icon-m icon-house"> </i>
+            </a>
           </li>
           <li>
             <a class="nav-link" href="#aboutMe">About me</a>
@@ -81,7 +79,7 @@
       <nav class="navbar-compressed">
         <div class="nav-header-menu changeable">
           <i
-            class="fa fa-bars fa-xl icon-link change-sidebar"
+            class="svg-icon svg-icon-m icon-bars change-sidebar"
             id="show-nav-columnar-menu">
           </i>
         </div>
@@ -99,25 +97,25 @@
             <nav>
               <ul id="nav-columnar-menu-list">
                 <li class="nav-element">
-                  <i class="fa fa-house fa-xl"></i>
+                  <i class="svg-icon icon-house svg-icon-s"> </i>
                   <a class="nav-link compressed change-sidebar" href="#"
                     ><h2 class="nav-link-label">Home</h2></a
                   >
                 </li>
                 <li class="nav-element">
-                  <i class="fa fa-user fa-xl"></i>
+                  <i class="svg-icon icon-user svg-icon-s"> </i>
                   <a class="nav-link compressed change-sidebar" href="#aboutMe"
                     ><h2 class="nav-link-label">About me</h2></a
                   >
                 </li>
                 <li class="nav-element">
-                  <i class="fa fa-tasks fa-xl"></i>
+                  <i class="svg-icon icon-file-code svg-icon-s"></i>
                   <a class="nav-link compressed change-sidebar" href="#work"
                     ><h2 class="nav-link-label">Work</h2></a
                   >
                 </li>
                 <li class="nav-element">
-                  <i class="fa fa-phone fa-xl"></i>
+                  <i class="svg-icon icon-phone svg-icon-s"> </i>
                   <a class="nav-link compressed change-sidebar" href="#contact"
                     ><h2 class="nav-link-label">Contact</h2></a
                   >
@@ -192,10 +190,9 @@
             </div>
             <div class="card-links">
               <a
-                class="icon-link"
                 aria-label="See my ecommerce github project"
                 href="https://github.com/carlosjorger/openEcommerce"
-                ><i class="fab fa-github fa-gl"></i
+                ><i class="svg-icon icon-github svg-icon-s"></i
               ></a>
             </div>
           </article>
@@ -211,10 +208,9 @@
             </div>
             <div class="card-links">
               <a
-                class="icon-link"
                 aria-label="See my portfolio github project"
                 href="https://github.com/carlosjorger/portfolio"
-                ><i class="fab fa-github fa-gl"></i
+                ><i class="svg-icon icon-github svg-icon-s"></i
               ></a>
             </div>
           </article>
@@ -227,13 +223,11 @@
           <h2 class="subtitle contacts-item">Contact</h2>
           <address class="contacts-item">
             <a
-              class="icon-link"
               href="mailto:rodriguezcuelloc@gmail.com"
               aria-label="contact via this email address"
               ><i class="svg-icon icon-google"></i
             ></a>
             <a
-              class="icon-link"
               href="https://github.com/carlosjorger"
               aria-label="See my github profile"
               ><i class="svg-icon icon-github"></i
