--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <nav class="navbar-uncompressed">
         <ul class="navbar">
           <li id="home">
-            <a href="#" class="icon-link">
+            <a href="#">
               <i class="svg-icon svg-icon-m icon-house"> </i>
             </a>
           </li>
