add aria-label to home icon

--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
               <ul id="nav-columnar-menu-list">
                 <li class="nav-element">
                   <i class="svg-icon icon-house svg-icon-s"> </i>
-                  <a class="nav-link compressed change-sidebar" href="#"
+                  <a
+                    class="nav-link compressed change-sidebar"
+                    href="#"
+                    aria-label="Go to the presentation section"
                     ><h2 class="nav-link-label">Home</h2></a
                   >
                 </li>
