--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <nav class="navbar-uncompressed">
         <ul class="navbar">
           <li id="home">
-            <a href="#">
+            <a href="#" aria-label="Go to the presentation section">
               <i class="svg-icon svg-icon-m icon-house"> </i>
             </a>
           </li>
@@ -98,10 +98,7 @@
               <ul id="nav-columnar-menu-list">
                 <li class="nav-element">
                   <i class="svg-icon icon-house svg-icon-s"> </i>
-                  <a
-                    class="nav-link compressed change-sidebar"
-                    href="#"
-                    aria-label="Go to the presentation section"
+                  <a class="nav-link compressed change-sidebar" href="#"
                     ><h2 class="nav-link-label">Home</h2></a
                   >
                 </li>
