--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Carlos Jorge's personal portfolio. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas" />
     <meta
       name="keywords"
-      content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website" />
+      content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website,Github Page" />
     <meta name="author" content="carlosjorger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:locale" content="en_US" />
