replace porfolio icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta
       property="twitter:title"
       content="Carlos Jorge's personal portfolio website" />
-    <link rel="icon" type="image/x-icon" href="images/github.ico" />
+    <link rel="icon" type="image/x-icon" href="images/logo-2.svg" />
     <title>Carlos Jorge's personal portfolio website</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
