load styles acync

--- a/index.html
+++ b/index.html
@@ -34,14 +34,36 @@
       content="Carlos Jorge's personal portfolio website" />
     <link rel="icon" type="image/x-icon" href="images/logo-2.svg" />
     <title>Carlos Jorge's personal portfolio website</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/presentation-section.css" />
-    <link rel="stylesheet" type="text/css" href="./css/project-section.css" />
-    <link rel="stylesheet" type="text/css" href="./css/footer.css" />
+      href="./css/styles.css"
+      media="print"
+      onload="this.media='all'" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./css/navbar.css"
+      media="print"
+      onload="this.media='all'" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./css/presentation-section.css"
+      media="print"
+      onload="this.media='all'" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./css/project-section.css"
+      media="print"
+      onload="this.media='all'" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./css/footer.css"
+      media="print"
+      onload="this.media='all'" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
