add new proyect

--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
             </header>
             <div class="card-description">
               <p>
-                OpenEcommerce is an ecommerce builded with .net. Using a
-                hexagonal architecture, cqrs pattern and more interesting
-                patterns.
+                OpenEcommerce is an ecommerce builded with .net using a
+                hexagonal architecture, cqrs pattern and other patterns.
               </p>
             </div>
             <div class="card-links">
@@ -210,6 +209,21 @@
               <a
                 aria-label="See my portfolio github project"
                 href="https://github.com/carlosjorger/portfolio"
+                ><i class="svg-icon icon-github svg-icon-s"></i
+              ></a>
+            </div>
+          </article>
+          <article id="online-cv-maker" class="card-project reveal">
+            <header class="card-title">
+              <h3>Online CV Maker</h3>
+            </header>
+            <div class="card-description">
+              <p>An online cv maker made in astro using vuejs components.</p>
+            </div>
+            <div class="card-links">
+              <a
+                aria-label="See online cv maker"
+                href="https://github.com/carlosjorger/online-cv-maker"
                 ><i class="svg-icon icon-github svg-icon-s"></i
               ></a>
             </div>
