--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       content="Carlos Jorge's personal portfolio website" />
     <meta
       property="og:image"
-      content="https://carlosjorger.github.io/images/logo-1.svg" />
+      content="https://carlosjorger.github.io/images/logo.png" />
     <meta
       property="twitter:description"
       content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas" />
